<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMe">

    <de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/author_img"
    android:layout_width="240dp"
    android:layout_height="240dp"
    android:layout_centerVertical="true"
    android:layout_marginTop="16dp"
    android:src="@drawable/pasfoto"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_header"
    app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_nama"
        style="@style/TextContent.Large"
        android:layout_marginTop="16dp"
        android:text="@string/profile_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author_img"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_email"
        style="@style/TextContent.Small"
        android:layout_marginTop="8dp"
        android:text="@string/profile_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/tv_header"
        style="@style/TextContent.Medium"
        android:layout_marginTop="24dp"
        android:text="@string/profile_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_kembali" />

    <Button
        android:id="@+id/btn_kembali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/kembali"
        android:textAllCaps="false"
        app:icon="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/linkedin_img"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/linkedin"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>